deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dgc-api
  namespace: dgc
spec:
  type: ClusterIP
  selector:
    app: dgc-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
